Bug 1939603 - Stretch the .titlebar-buttonbox-container on Linux too. r=freaktechnik
Differential Revision: https://phabricator.services.mozilla.com/D233069

--HG--
extra : amend_source : bbf798e5d0946b1e67df14d0df9fdaaae1a410b3

--- a/mail/themes/shared/mail/unifiedToolbar.css
+++ b/mail/themes/shared/mail/unifiedToolbar.css
@@ -47,7 +47,7 @@ unified-toolbar {
   & .titlebar-buttonbox-container {
     flex: 0 0 auto;
 
-    @media (-moz-platform: windows) {
+    @media (-moz-platform: windows) or (-moz-platform: linux) {
       align-self: stretch;
     }
   }
